tests/baselines/reference/classOverloadForFunction.errors.txt
==== tests/cases/compiler/classOverloadForFunction.ts (1 errors) ====
    class foo { };
    function foo() {}
             ~~~
!!! error TS2000: Duplicate identifier 'foo'.
    